@@ -1,3 +1,11 @@
+2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: did some cleanups
+	* include/Operation.h,
+	  src/Operation.cc: added get_index_extended to get the ext_index in a
+	  uniform way instead of calculating it every time ourselves.
+	
 2005-12-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: check if file is open before using it.
